# arduino-infrared-blaster

./: Cargo.toml  README.md  Ravedude.toml  rust-toolchain.toml
src/: main.rs  necext.rs  sirc.rs
